2012-01-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c:  Allow shell commands from ~/.gnuplot but not from shared
	initialization files.

	* configure.in: Report status of aquaterm configuration correctly
	(Lutz Maibaum).

2012-01-07  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotScene.cpp: Normalize the zoom rectangle to avoid
	redrawing artifacts

2012-01-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lf_pop): If the current input stream from "load file" is
	really a pipe, close it with pclose() rather than fclose().
	Bug #3470351

2012-01-07  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotScene.cpp: Normalize the zoom rectangle to avoid
	redrawing artifacts

2012-01-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/Makefile.am: Tweak autodetection of Qt utilities to
	handle differences in the Qt 4.6 and 4.7 pkg-config files.

	* src/set.c: Call gp_expand_tilde() in 'set loadpath' and 'set fontpath'.

2012-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c: Fix an uninitialized colorspec found by valgrind.
	The trigger was hidden3d handling of '... with labels tc palette'.

2012-01-02  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/qt.trm
	In src/qtterminal: QtGnuplotEvent.cpp QtGnuplotEvent.h
	QtGnuplotItems.cpp QtGnuplotItems.h QtGnuplotScene.cpp
	QtGnuplotScene.h QtGnuplotSettings.ui QtGnuplotWidget.cpp
	QtGnuplotWidget.h qt_term.cpp qt_term.h README.Qt:
	Update qt terminal to support pointsize, dashed lines, round linejoins,
	term->layer(), LT_BACKGROUND, mouse toggling, faster rendering.

2012-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotApplication.cpp (processEvent):
	* src/wxterminal/wxt_gui.cpp (wxt_atexit):
	In "persist" mode, if all qt plot windows were already closed when the
	main program exited then the daughter process would become a zombie.